# teplox-backend-main

./: .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
backend/: logic.ipynb  main.py
backend/domain/: calculator.py  exchanger.py  substance.py
backend/repository/: dif_temp_xn.xlsx  xn.csv  xn.xlsx
backend/usecases/: get_heatexchanger_by_area.py
domain/: __init__.py  calculator.py  exchanger.py
repository/: area_xn_tn.csv  area_xn_tn.xlsx  dif_temp_tn.xlsx  get_df.py  table_area_exchange_tn_tk.csv  tn.csv  tn.xlsx
tests/: test_substance.py
usecases/: get_heatexchanger_by_area.py
web/: schemas.py
