[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
pandas = "^1.5.3"
openpyxl = "^3.1.0"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
